Fix messages overflow

--- a/src/components/ChatList/index.scss
+++ b/src/components/ChatList/index.scss
@@ -2,6 +2,7 @@
 
 .gc-ChatList {
   height: 66vh;
+  overflow-y: scroll;
 
   &-ul {
     color: #00818a;
